force-app/main/default/objects/KYC_Maintenance_Request__c/KYC_Maintenance_Request__c.object-meta.xml
<CustomObject>
    <description>Digitization: Account Onboarding. This object stores the details of all customer data changes that needs to be reviewed by the KYC Consultant</description>
    <label>KYC Maintenance Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>KYC Maintenance Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Maintenance Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>