force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Account_Application__c.field-meta.xml
<CustomField>
    <fullName>Account_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Application</label>
    <referenceTo>Account_Application__c</referenceTo>
    <relationshipName>ClientDataChangeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>