force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Turnover__c</fullName>
    <label>Annual Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>