force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Changes_Made__c.field-meta.xml
<CustomField>
    <fullName>Changes_Made__c</fullName>
    <label>Changes Made</label>
    <length>255</length>
    <type>Text</type>
</CustomField>