force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Entity_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Registration_Number__c</fullName>
    <label>Entity Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>