force-app/main/default/objects/KYC_Maintenance_Request__c/fields/ORG_Id__c.field-meta.xml
<CustomField>
    <fullName>ORG_Id__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_420 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_420 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORG Id</label>
    <type>Text</type>
</CustomField>