force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Registered_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_City__c</fullName>
    <label>Registered City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>