force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Registered_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Postal_Code__c</fullName>
    <label>Registered Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>