force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Registered_Province__c.field-meta.xml
<CustomField>
    <fullName>Registered_Province__c</fullName>
    <label>Registered State/Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>