force-app/main/default/objects/KYC_Maintenance_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Entity Detail</fullName>
            </value>
            <value>
                <fullName>Entity Detail Changed</fullName>
            </value>
            <value>
                <fullName>Entity Detail No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>