force-app/main/default/objects/KYC_Maintenance_Request__c/fields/TradingAs__c.field-meta.xml
<CustomField>
    <fullName>TradingAs__c</fullName>
    <label>Trading As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>